# claude-semaforo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.example.json
.github/workflows/: release.yml
docs/reviews/: sync-review.md
hooks/: notify.ps1  notify.sh
src/: App.tsx  api.ts  sound.ts  styles.css  types.test.ts  types.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  server.rs  setup.rs  state.rs
src/components/: ConfigView.tsx  Glyph.tsx  Panel.tsx  Pill.tsx  Segmented.tsx  SessionRow.tsx  Toggle.tsx  icons.tsx
